--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div style="text-align: center;margin-top: 7%;"><a class="btn btn-alt btn-sm" href="https://discord.gg/yMTRTsj" target="_self">Buy Coins</a></div>
+                        <div style="text-align: center;margin-top: 7%;"><a class="btn btn-alt btn-sm" href="https://www.acedcoin.com/buycoin.html" target="_self">Buy Coins</a></div>
 
                     </div>
                 </div>
