--- a/index.html
+++ b/index.html
@@ -916,6 +916,22 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="wpb_column vc_column_container vc_col-sm-6 vc_col-md-3">
+                                <div class="vc_column-inner ">
+                                    <div class="wpb_wrapper">
+                                        <div class="team-circle text-center">
+                                            <div class="team-photo">
+                                                <img src="zhirun.jpg" alt="">
+                                                <span data-mfp-src="http://wpdemo.oceanthemes.net/icos/team/gabriel-bernal/" class="expand-trigger content-popup"></span></div>
+                                            <div class="team-info">
+                                                <h5 class="team-name">Zhirun Zhao</h5>
+                                                <span class="team-title">Web Developer @WebDev(Zhirun)</span>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
