--- a/index.html
+++ b/index.html
@@ -947,7 +947,9 @@
                         <div class="wpb_wrapper">
                             <div class="wpb_single_image wpb_content_element vc_align_center">
                                 <figure class="wpb_wrapper vc_figure">
-                                    <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="900" height="675" src="marsternode.jpg" class="vc_single_image-img attachment-full" alt="" srcset="marsternode.jpg 900w, marsternode.jpg 300w, marsternode.jpg 768w" sizes="(max-width: 900px) 100vw, 900px"></div>
+                                    <div class="vc_single_image-wrapper   vc_box_border_grey">
+                                        <a href="https://youtu.be/37hhHKjirw8"><img width="900" height="675" src="marsternode.jpg" class="vc_single_image-img attachment-full" alt="" srcset="marsternode.jpg 900w, marsternode.jpg 300w, marsternode.jpg 768w" sizes="(max-width: 900px) 100vw, 900px"></a>
+                                    </div>
                                 </figure>
                             </div>
                         </div>
