--- a/index.html
+++ b/index.html
@@ -365,8 +365,7 @@
     </div>
     <div class="clearfix"></div>
 </section>
-<section
-        class="vc_rows wpb_row vc_row-fluid section-pad no-pb section-bg-alt vc_row-o-equal-height vc_row-o-content-middle vc_row-flex">
+<section id="specification"   class="vc_rows wpb_row vc_row-fluid section-pad no-pb section-bg-alt vc_row-o-equal-height vc_row-o-content-middle vc_row-flex">
     <div class="container">
         <div class="row">
             <div class="res-m-btm wpb_column vc_column_container vc_col-sm-6">
