--- a/index.html
+++ b/index.html
@@ -347,10 +347,10 @@
                         <div class="wpb_text_column wpb_content_element  vc_custom_1520828093008">
                             <div class="wpb_wrapper">
                                 <h2>What is AceD?</h2>
-                                <p class="lead">AceD is a decentralized cryptocurrency that uses peer-to-peer
+                                <p class="">AceD is a decentralized cryptocurrency that uses peer-to-peer
                                     technology to operate with no central authority or banks.</p>
-                                <p class="lead">AceD - Powerful Infrastructure for Decentralized Applications.</p>
-                                <p class="lead">AceD bases it's fundamentals in providing an alternative to existing centralized systems through the blockchain. Other than most cryptocurrencies that just provide anonymity, AceD plans on developing a Privacy Orientated Platform where the possibilities are endless. And not to mention these implementations can be voted on through proposals with their Governance model forked from Dash and Polis allowing any team members to be constantly self funded.</p>
+                                <p class="">AceD - Powerful Infrastructure for Decentralized Applications.</p>
+                                <p class="">AceD bases it's fundamentals in providing an alternative to existing centralized systems through the blockchain. Other than most cryptocurrencies that just provide anonymity, AceD plans on developing a Privacy Orientated Platform where the possibilities are endless. And not to mention these implementations can be voted on through proposals with their Governance model forked from Dash and Polis allowing any team members to be constantly self funded.</p>
                             </div>
                         </div>
 
