--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                         <div class="wpb_text_column wpb_content_element  text-block">
                             <div class="wpb_wrapper">
                                 <h2>AceD Coin Specifications</h2>
-                                <p class="lead">AceD coin is a privacy oriented platform. Community driven currency,
+                                <p class="">AceD coin is a privacy oriented platform. Community driven currency,
                                     anyone can create or vote AceD governance proposals. Features include private
                                     send and instant payments. Transactions are 100% private and confirm in less
                                     than 1 second.</p>
