--- a/index.html
+++ b/index.html
@@ -941,7 +941,7 @@
                 <div class="vc_column-inner ">
                     <div class="wpb_wrapper">
                         <div class="section-head text-center">
-                            <h2 class="section-title">Masternode/Mining Tutorial and Guides</h2>
+                            <h2 class="section-title" style="margin-bottom: 29px;">Masternode/Mining Tutorial and Guides</h2>
                         </div>
                         <div class="vc_empty_space  vc_hidden-sm vc_hidden-xs" style="height: 60px"><span class="vc_empty_space_inner"></span></div>
                     </div>
