--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                             href="http://explorer.acedcoin.com" class="nav-link">Explorer</a></li>
                     <li id="menu-item-246"
                         class="menu-item menu-item-type-custom menu-item-object-custom menu-item-246"><a
-                            href="#media">Events</a></li>
+                            href="#latestblog">Events</a></li>
                     <li id="menu-item-247"
                         class="menu-item menu-item-type-custom menu-item-object-custom menu-item-247"><a
                             href="#faqs">FAQ</a></li>
@@ -1304,10 +1304,10 @@
     </div>
     <div class="clearfix"></div>
 </section>
-<section id="contact" class="vc_rows wpb_row vc_row-fluid section-pad section-bg-alt">
+<section id="twitter" class="vc_rows wpb_row vc_row-fluid section-pad section-bg-alt">
     <div class="container">
         <div class="row">
-            <div class="wpb_column vc_column_container vc_col-sm-12">
+            <div class="wpb_column vc_column_container vc_col-sm-12  vc_col-md-offset-2 vc_col-md-8">
                 <div class="vc_column-inner ">
                     <div class="wpb_wrapper">
                         <div class="section-head text-center" style="margin-bottom: 11%;">
