--- a/index.html
+++ b/index.html
@@ -488,9 +488,9 @@
 
                                             <figure class="wpb_wrapper vc_figure">
                                                 <div class="vc_single_image-wrapper   vc_box_border_grey"><a href="https://github.com/Acedcoin/AceD/releases/tag/1.4"><img
-                                                        width="900" height="675" src="3_Image-066.jpg"
+                                                        width="900" height="675" src="3_Image-066.png"
                                                         class="vc_single_image-img attachment-full" alt=""
-                                                        srcset="3_Image-066.jpg 900w, 3_Image-066.jpg 300w, 3_Image-066.jpg 768w"
+                                                        srcset="3_Image-066.png 900w, 3_Image-066.png 300w, 3_Image-066.png 768w"
                                                         sizes="(max-width: 900px) 100vw, 900px"></a></div>
                                             </figure>
                                         </div>
@@ -603,10 +603,10 @@
                                         <div class="wpb_single_image wpb_content_element vc_align_center">
 
                                             <figure class="wpb_wrapper vc_figure">
-                                                <div class="vc_single_image-wrapper   vc_box_border_grey"><img
-                                                        width="675" height="653" src="3_Image-01.jpg"
+                                                <div class="vc_single_image-wrapper   vc_box_border_grey"><img style="    border-radius: 17px;"
+                                                        width="675" height="653" src="3_Image-02.jpg"
                                                         class="vc_single_image-img attachment-full" alt=""
-                                                        srcset="3_Image-01.jpg 675w, 3_Image-01.jpg 300w"
+                                                        srcset="3_Image-02.jpg 675w, 3_Image-02.jpg 300w"
                                                         sizes="(max-width: 675px) 100vw, 675px"></div>
 
                                             </figure>
@@ -624,7 +624,7 @@
     </div>
     <div class="clearfix"></div>
 </section>
-<section id="roadmap" class="vc_rows wpb_row vc_row-fluid section-pad section-bg section-connect">
+<section id="roadmap" class="vc_rows wpb_row vc_row-fluid section-pad section-bg section-connect" style="background: #12132f;">
     <div class="container">
         <div class="row">
             <div class="wpb_column vc_column_container vc_col-sm-12">
@@ -986,7 +986,7 @@
     </div>
     <div class="clearfix"></div>
 </section>
-<section id="faqs" class="vc_rows wpb_row vc_row-fluid section-pad no-pb">
+<section id="faqs" class="vc_rows wpb_row vc_row-fluid section-pad no-pb" style="background: #0d0f26;">
     <div class="container">
         <div class="row">
             <div class="wpb_column vc_column_container vc_col-sm-12  vc_col-md-offset-2 vc_col-md-8">
@@ -1353,7 +1353,7 @@
                                             <div class="wpb_wrapper">
                                                 <ul class="contact-info">
                                                     <li><em class="fa fa-envelope" aria-hidden="true">email</em>info@acedcoin.com</li>
-                                                    <li><a href="https://discord.gg/yMTRTsj" style="vertical-align: middle;"><img src="discord.png" style="margin:0 17px;"><span style="color: white;">Join us on discord</span></a></li>
+                                                    <li><a href="https://discord.gg/yMTRTsj" style="vertical-align: middle;"><img src="discord.png" style="margin:0 17px 15px;"><span style="color: white;">Join us on discord</span></a></li>
                                                 </ul>
                                             </div>
                                         </div>
