--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
     </div>
     <div class="clearfix"></div>
 </section>
-<section id="roadmap" class="vc_rows wpb_row vc_row-fluid section-pad section-bg section-connect" style="background: #12132f;">
+<section id="roadmap" class="vc_rows wpb_row vc_row-fluid section-pad section-bg section-connect">
     <div class="container">
         <div class="row">
             <div class="wpb_column vc_column_container vc_col-sm-12">
