--- a/index.html
+++ b/index.html
@@ -900,9 +900,9 @@
                                         <div class="team-circle text-center">
                                             <div class="team-photo">
                                                 <img src="zhirun.jpg" alt="">
-                                                <span data-mfp-src="http://wpdemo.oceanthemes.net/icos/team/gabriel-bernal/" class="expand-trigger content-popup"></span></div>
+                                                <span data-mfp-src="https://www.freelancer.com/u/Ideallsolution" class="expand-trigger content-popup"></span></div>
                                             <div class="team-info">
-                                                <h5 class="team-name">Zhirun Zhao</h5>
+                                                <h5 class="team-name"><a href="https://www.freelancer.com/u/Ideallsolution" target="_blank" style="color:#fff;">Zhirun Zhao</a></h5>
                                                 <span class="team-title">Web Developer @WebDev(Zhirun)</span>
                                             </div>
                                         </div>
