--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US"
+<html prefix="og:https://www.acedcoin.com" lang="en-US"
   class="fa-events-icons-ready js_active vc_desktop vc_transform vc_transform wf-poppins-n4-inactive wf-poppins-n6-inactive wf-poppins-n5-inactive wf-inactive">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -7,6 +7,10 @@
 <link rel="profile" href="http://gmpg.org/xfn/11">
 <link rel="pingback" href="http://wpdemo.oceanthemes.net/icos/xmlrpc.php">
 <title>AceD | Value in Anonymity </title>
+    <meta property="og:title" content="AceD | Value in Anonymity">
+    <meta property="og:type" content="https://youtu.be/37hhHKjirw8">
+    <meta property="og:url" content="https://www.acedcoin.com/">
+    <meta property="og:image" content="https://www.acedcoin.com/logo.png">
 <link rel="dns-prefetch" href="http://use.fontawesome.com/">
 <link rel="dns-prefetch" href="http://fonts.googleapis.com/">
 <link rel="dns-prefetch" href="http://s.w.org/">
@@ -125,7 +129,8 @@
 <link rel="icon" href="favicon.png" sizes="192x192">
 <link rel="apple-touch-icon-precomposed"  href="favicon.png">
 <meta name="msapplication-TileImage"  content="favicon.png">
-<style type="text/css" data-type="vc_shortcodes-custom-css">.vc_custom_1520825700169 {
+<style type="text/css" data-type="vc_shortcodes-custom-css">
+    .vc_custom_1520825700169 {
     margin-bottom: 35px !important;
 }
 .vc_custom_1520828093008 {
