fix the payment box

--- a/buycoin.html
+++ b/buycoin.html
@@ -245,7 +245,7 @@
                                             <h2 style="margin-bottom: 37px; color: #d9b169;">Early supporters program is now live. Price per coin 0.75 USD. Masternode collateral 1000 ACED. Please join Discord once you have paid and message @MaGe-AceD#9956 with your TXID.</h2>
                                             <ul class="btns">
                                                 <script src="https://gateway.gear.mycelium.com/gear-widget-host.js"></script>
-                                                <iframe id="gear-widget" scrolling="no" src="https://gateway.gear.mycelium.com/widgets/6cb9be816d2a5ca2e6268a73648c8ab2de2a5877fc3472c091372e0a08828d66" style="border: 1.3px solid #d1ab65; border-radius: 7px; height: 169px; min-width: 220px;max-width: 361px;width: 100%;"></iframe>
+                                                <iframe id="gear-widget" scrolling="yes" src="https://gateway.gear.mycelium.com/widgets/6cb9be816d2a5ca2e6268a73648c8ab2de2a5877fc3472c091372e0a08828d66" style="border: 1.3px solid #d1ab65; border-radius: 7px; height: 169px; min-width: 220px;max-width: 361px;width: 100%;"></iframe>
                                             </ul>
                                         </div>
                                     </div>
