--- a/index.html
+++ b/index.html
@@ -919,11 +919,27 @@
                                     <div class="wpb_wrapper">
                                         <div class="team-circle text-center">
                                             <div class="team-photo">
-                                                <img src="Andrew.png" alt="">
+                                                <img src="Dream.png" alt="">
                                                 <span data-mfp-src="http://wpdemo.oceanthemes.net/icos/team/gabriel-bernal/" class="expand-trigger content-popup"></span></div>
                                             <div class="team-info">
                                                 <h5 class="team-name">Andrew Bondarenko</h5>
                                                 <span class="team-title">Technical Support @Abko</span>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="wpb_column vc_column_container vc_col-sm-6 vc_col-md-3">
+                                <div class="vc_column-inner ">
+                                    <div class="wpb_wrapper">
+                                        <div class="team-circle text-center">
+                                            <div class="team-photo">
+                                                <img src="Andrew.png" alt="">
+                                                <span data-mfp-src="http://wpdemo.oceanthemes.net/icos/team/gabriel-bernal/" class="expand-trigger content-popup"></span></div>
+                                            <div class="team-info">
+                                                <h5 class="team-name">Dream</h5>
+                                                <span class="team-title">Senior Advisor @Dream-O</span>
                                             </div>
                                         </div>
 
