--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
 <a id="popuplink" href="#inline" style="display:none;"></a>
 <div id="inline" style="display: none; text-align:center;background: #0D102A;padding: 5%;">
     <img src="logo-white.png" alt="" id="logo">
-    <h2>Early Supporters Program is now LIVE</h2>
-    <p style="color: #fff;">Join AceD Early supporters program to get early access to Masternodes and Wallets. The raised funds are to be spent on Team Building, Platform Maintenance, Marketing, and Development. Please join our <a href="https://discord.gg/bW7sYBg">Discord</a> and contact @MaGe-AceD#9956 for sales inquiries.</p>
+    <h2>Pre Sale Program is now LIVE</h2>
+    <p style="color: #fff;">Join AceD Pre sale program to get early access to Masternodes and Wallets. The raised funds are to be spent on Team Building, Platform Maintenance, Marketing, and Development. Please join our <a href="https://discord.gg/bW7sYBg">Discord</a> and contact @MaGe-AceD#9956 for sales inquiries.</p>
     <div class="wpb_wrapper">
         <div class="row" style="text-align: left;">
             <div class="col-sm-6">
@@ -238,7 +238,7 @@
                             href="#intro" class="nav-link">What is AceD?</a></li>
                     <li id="menu-item-241"
                         class="menu-item menu-item-type-custom menu-item-object-custom menu-item-241"><a
-                            href="#tokensale" class="nav-link">Early Supporters</a></li>
+                            href="#tokensale" class="nav-link">Pre sale</a></li>
                     <li id="menu-item-242"
                         class="menu-item menu-item-type-custom menu-item-object-custom menu-item-242"><a
                             href="#roadmap" class="nav-link">Roadmap</a></li>
@@ -546,8 +546,8 @@
                                         <div class="wpb_wrapper">
                                             <div class="wpb_text_column wpb_content_element  vc_custom_1520828093008">
                                                 <div class="wpb_wrapper" style="text-align: center; max-width: 777px; margin: auto;">
-                                                    <h2>Early Supporters Program is now LIVE</h2>
-                                                    <p>Join AceD Early supporters program to get early access to Masternodes and Wallets. The raised funds are to be spent on Team Building, Platform Maintenance, Marketing, and Development. Please join our <a href="https://discord.gg/bW7sYBg">Discord</a> and contact @MaGe-AceD#9956 for sales inquiries.</p>
+                                                    <h2>Pre sale Program is now LIVE</h2>
+                                                    <p>Join AceD Pre sale program to get early access to Masternodes and Wallets. The raised funds are to be spent on Team Building, Platform Maintenance, Marketing, and Development. Please join our <a href="https://discord.gg/bW7sYBg">Discord</a> and contact @MaGe-AceD#9956 for sales inquiries.</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -1185,7 +1185,7 @@
                                                         <div id="collapse-607" class="collapse show"
                                                              data-parent="#accordion-220">
                                                             <div class="card-body">
-                                                                <p>Yes!  AceD (ACED) is categorized as Proof-of-Work + Masternode.  The mining algorithm is X11.  Target block time is 120 seconds with a 4 AceD reward for miners (16 AceDreward for Masternodes).  There is a 6% premine used to fund early supporter presale.  Max supply will be 25,000,000 AceD. </p>
+                                                                <p>Yes!  AceD (ACED) is categorized as Proof-of-Work + Masternode.  The mining algorithm is X11.  Target block time is 120 seconds with a 4 AceD reward for miners (16 AceDreward for Masternodes).  There is a 6% premine used to fund pre sale.  Max supply will be 25,000,000 AceD. </p>
                                                             </div>
                                                         </div>
                                                     </div>
