--- a/index.html
+++ b/index.html
@@ -189,16 +189,16 @@
     <div class="wpb_wrapper">
         <div class="row" style="text-align: left;">
             <div class="col-sm-6">
-                    <h6>Start:  <span> May 16th 2018</span></h6>
+                    <h6>Start:  <span> May 31st 2018</span></h6>
             </div>
             <div class="col-sm-6">
-                    <h6>Number of Coins for Sale: <span> 500,000 (ACED)</span></h6>
+                    <h6>Number of Coins for Sale: <span> 250,000 (ACED)</span></h6>
             </div>
             <div class="col-sm-6">
-                    <h6>End: <span> May 30th 2018</span></h6>
+                    <h6>End: <span> June 15th 2018</span></h6>
             </div>
             <div class="col-sm-6">
-                    <h6>Coin Price: <span> 0.75 USD</span></h6>
+                    <h6>Coin Price: <span> 1.00 USD</span></h6>
             </div>
             <div class="col-sm-6">
                     <h6>Acceptable currencies: <span> BTC</span></h6>
