--- a/index.html
+++ b/index.html
@@ -563,25 +563,25 @@
                                             <div class="col-sm-6">
                                                 <div class="event-single-info">
                                                     <h6>Start</h6>
-                                                    <p>May 16th 2018</p>
+                                                    <p>May 31st 2018</p>
                                                 </div>
                                             </div>
                                             <div class="col-sm-6">
                                                 <div class="event-single-info">
                                                     <h6>Number of Coins for Sale</h6>
-                                                    <p>500,000 (ACED)</p>
+                                                    <p>250,000 (ACED)</p>
                                                 </div>
                                             </div>
                                             <div class="col-sm-6">
                                                 <div class="event-single-info">
                                                     <h6>End</h6>
-                                                    <p>May 30 2018</p>
+                                                    <p>June 15th 2018</p>
                                                 </div>
                                             </div>
                                             <div class="col-sm-6">
                                                 <div class="event-single-info">
                                                     <h6>Coin Price</h6>
-                                                    <p>0.75 USD</p>
+                                                    <p>1.00 USD</p>
                                                 </div>
                                             </div>
                                             <div class="col-sm-6">
