--- a/dashboard/index-stock-data.html
+++ b/dashboard/index-stock-data.html
@@ -742,7 +742,7 @@
     <div class="container-fluid pt-25"> 
       <!-- Row -->
       <div class="row">
-        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
+        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
           <div class="panel panel-default card-view pa-0">
             <div class="panel-wrapper collapse in">
               <div class="panel-body pa-0">
@@ -760,7 +760,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
+        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
           <div class="panel panel-default card-view pa-0">
             <div class="panel-wrapper collapse in">
               <div class="panel-body pa-0">
@@ -778,7 +778,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
+        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
           <div class="panel panel-default card-view pa-0">
             <div class="panel-wrapper collapse in">
               <div class="panel-body pa-0">
@@ -796,24 +796,24 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
-          <div class="panel panel-default card-view pa-0">
-            <div class="panel-wrapper collapse in">
-              <div class="panel-body pa-0">
-                <div class="sm-data-box">
-                  <div class="container-fluid">
-                    <div class="row">
-                      <div class="col-xs-6 pl-20 pr-0 data-wrap-left"> <span class="txt-dark block counter"><i class="mdi mdi-currency-usd"></i><span class="counter-anim">8,569 </span><i class="mdi mdi-arrow-up"></i></span> <span class="weight-500 uppercase-font block">Ripple XRP </span> </div>
-                      <div class="col-xs-6 text-center  pl-0 pr-0 pt-25  data-wrap-right">
-                        <div id="sparkline_1_2"  class="sparkline-w-100-h-50"></div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+        <!--<div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">-->
+          <!--<div class="panel panel-default card-view pa-0">-->
+            <!--<div class="panel-wrapper collapse in">-->
+              <!--<div class="panel-body pa-0">-->
+                <!--<div class="sm-data-box">-->
+                  <!--<div class="container-fluid">-->
+                    <!--<div class="row">-->
+                      <!--<div class="col-xs-6 pl-20 pr-0 data-wrap-left"> <span class="txt-dark block counter"><i class="mdi mdi-currency-usd"></i><span class="counter-anim">8,569 </span><i class="mdi mdi-arrow-up"></i></span> <span class="weight-500 uppercase-font block">Ripple XRP </span> </div>-->
+                      <!--<div class="col-xs-6 text-center  pl-0 pr-0 pt-25  data-wrap-right">-->
+                        <!--<div id="sparkline_1_2"  class="sparkline-w-100-h-50"></div>-->
+                      <!--</div>-->
+                    <!--</div>-->
+                  <!--</div>-->
+                <!--</div>-->
+              <!--</div>-->
+            <!--</div>-->
+          <!--</div>-->
+        <!--</div>-->
       </div>
       <!-- Row --> 
       
