--- a/index.html
+++ b/index.html
@@ -935,6 +935,22 @@
                                         <div class="wpb_wrapper">
                                             <div class="team-circle text-center">
                                                 <div class="team-photo">
+                                                    <img src="Mocho.png" alt="">
+                                                    <span data-mfp-src="http://wpdemo.oceanthemes.net/icos/team/gabriel-bernal/" class="expand-trigger content-popup"></span></div>
+                                                <div class="team-info">
+                                                    <h5 class="team-name">Dream</h5>
+                                                    <span class="team-title">Public Relations Lead @Mocho 17</span>
+                                                </div>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="wpb_column vc_column_container vc_col-sm-6 vc_col-md-3">
+                                    <div class="vc_column-inner ">
+                                        <div class="wpb_wrapper">
+                                            <div class="team-circle text-center">
+                                                <div class="team-photo">
                                                     <img src="Dream.png" alt="">
                                                     <span data-mfp-src="http://wpdemo.oceanthemes.net/icos/team/gabriel-bernal/" class="expand-trigger content-popup"></span></div>
                                                 <div class="team-info">
