--- a/index.html
+++ b/index.html
@@ -935,11 +935,11 @@
                                         <div class="wpb_wrapper">
                                             <div class="team-circle text-center">
                                                 <div class="team-photo">
-                                                    <img src="Mocho.png" alt="">
+                                                    <img src="Dream.png" alt="">
                                                     <span data-mfp-src="http://wpdemo.oceanthemes.net/icos/team/gabriel-bernal/" class="expand-trigger content-popup"></span></div>
                                                 <div class="team-info">
                                                     <h5 class="team-name">Dream</h5>
-                                                    <span class="team-title">Public Relations Lead @Mocho 17</span>
+                                                    <span class="team-title">Senior Advisor @Dream-O</span>
                                                 </div>
                                             </div>
 
@@ -951,11 +951,11 @@
                                         <div class="wpb_wrapper">
                                             <div class="team-circle text-center">
                                                 <div class="team-photo">
-                                                    <img src="Dream.png" alt="">
+                                                    <img src="Mocho.png" alt="">
                                                     <span data-mfp-src="http://wpdemo.oceanthemes.net/icos/team/gabriel-bernal/" class="expand-trigger content-popup"></span></div>
                                                 <div class="team-info">
-                                                    <h5 class="team-name">Dream</h5>
-                                                    <span class="team-title">Senior Advisor @Dream-O</span>
+                                                    <h5 class="team-name">Mocho 17</h5>
+                                                    <span class="team-title">Public Relations Lead @Mocho 17</span>
                                                 </div>
                                             </div>
 
