--- a/index.html
+++ b/index.html
@@ -946,6 +946,38 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="wpb_column vc_column_container vc_col-sm-6 vc_col-md-3">
+                                    <div class="vc_column-inner ">
+                                        <div class="wpb_wrapper">
+                                            <div class="team-circle text-center">
+                                                <div class="team-photo">
+                                                    <img src="siham.jpg" alt="">
+                                                    <span data-mfp-src="http://wpdemo.oceanthemes.net/icos/team/gabriel-bernal/" class="expand-trigger content-popup"></span></div>
+                                                <div class="team-info">
+                                                    <h5 class="team-name">siham</h5>
+                                                    <span class="team-title">Community Manager @siham288</span>
+                                                </div>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="wpb_column vc_column_container vc_col-sm-6 vc_col-md-3">
+                                    <div class="vc_column-inner ">
+                                        <div class="wpb_wrapper">
+                                            <div class="team-circle text-center">
+                                                <div class="team-photo">
+                                                    <img src="Frank-Garzajpg.jpg" alt="">
+                                                    <span data-mfp-src="http://wpdemo.oceanthemes.net/icos/team/gabriel-bernal/" class="expand-trigger content-popup"></span></div>
+                                                <div class="team-info">
+                                                    <h5 class="team-name">Frank Garza</h5>
+                                                    <span class="team-title">Moderator @fg512</span>
+                                                </div>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
