--- a/index.html
+++ b/index.html
@@ -954,7 +954,7 @@
                                                     <img src="siham.jpg" alt="">
                                                     <span data-mfp-src="http://wpdemo.oceanthemes.net/icos/team/gabriel-bernal/" class="expand-trigger content-popup"></span></div>
                                                 <div class="team-info">
-                                                    <h5 class="team-name">siham</h5>
+                                                    <h5 class="team-name">Siham</h5>
                                                     <span class="team-title">Community Manager @siham288</span>
                                                 </div>
                                             </div>
