--- a/index.html
+++ b/index.html
@@ -293,13 +293,13 @@
                                         </div>
                                     </div>
                                     <ul class="social">
-                                        <li><a href="#"><em class="fa fa-facebook" aria-hidden="true"></em></a></li>
+                                        <li><a href="https://www.facebook.com/AceDcrypto"><em class="fa fa-facebook" aria-hidden="true"></em></a></li>
                                         <li><a href="https://twitter.com/AcedCoin"><em class="fa fa-twitter"
                                                                                        aria-hidden="true"></em></a></li>
-                                        <li><a href="#"><em class="fa fa-youtube-play" aria-hidden="true"></em></a></li>
-                                        <li><a href="#"><em class="fa fa-github" aria-hidden="true"></em></a></li>
-                                        <li><a href="#"><em class="fa fa-btc" aria-hidden="true"></em></a></li>
-                                        <li><a href="#"><em class="fa fa-medium" aria-hidden="true"></em></a></li>
+                                        <li><a href="https://m.youtube.com/channel/UCA8GJI1QjjCe_XwBOA0Vnvg"><em class="fa fa-youtube-play" aria-hidden="true"></em></a></li>
+                                        <li><a href="https://github.com/Acedcoin/acedcoin.github.io"><em class="fa fa-github" aria-hidden="true"></em></a></li>
+                                        <li><a href="https://bitcointalk.org/index.php?topic=4159695.new"><em class="fa fa-btc" aria-hidden="true"></em></a></li>
+                                        <li><a href="https://medium.com/@acedcoin"><em class="fa fa-medium" aria-hidden="true"></em></a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -1529,12 +1529,12 @@
             <div class="row text-center">
                 <div class="col-md-12">
                     <ul class="social">
-                        <li><a href="#"><em class="fa fa-facebook" aria-hidden="true"></em></a></li>
+                        <li><a href="https://www.facebook.com/AceDcrypto"><em class="fa fa-facebook" aria-hidden="true"></em></a></li>
                         <li><a href="https://twitter.com/AcedCoin"><em class="fa fa-twitter"  aria-hidden="true"></em></a></li>
-                        <li><a href="#"><em class="fa fa-youtube-play" aria-hidden="true"></em></a></li>
-                        <li><a href="#"><em class="fa fa-github" aria-hidden="true"></em></a></li>
-                        <li><a href="#"><em class="fa fa-bitcoin" aria-hidden="true"></em></a></li>
-                        <li><a href="#"><em class="fa fa-medium" aria-hidden="true"></em></a></li>
+                        <li><a href="https://m.youtube.com/channel/UCA8GJI1QjjCe_XwBOA0Vnvg"><em class="fa fa-youtube-play" aria-hidden="true"></em></a></li>
+                        <li><a href="https://github.com/Acedcoin/acedcoin.github.io"><em class="fa fa-github" aria-hidden="true"></em></a></li>
+                        <li><a href="https://bitcointalk.org/index.php?topic=4159695.new"><em class="fa fa-bitcoin" aria-hidden="true"></em></a></li>
+                        <li><a href="https://medium.com/@acedcoin"><em class="fa fa-medium" aria-hidden="true"></em></a></li>
                     </ul>
                     <span class="copyright-text">
                     Copyright © 2018, AceD Coin Made By AceD Developers<span>All trademarks and copyrights belong to their respective owners</span>                        </span>
