--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             padding: 0 !important;
         }
     </style>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" id="contact-form-7-css" href="styles.css" type="text/css" media="all">
     <link rel="stylesheet" id="icos-fonts-css" href="css" type="text/css" media="all">
     <link rel="stylesheet" id="vendor-css" href="vendor.bundle.css" type="text/css" media="all">
@@ -416,35 +417,98 @@
         <div class="clearfix"></div>
     </section>
     <section id="applications" class="vc_rows wpb_row vc_row-fluid section-pad section-bg section-connect">
+        <!--<div class="container">-->
+            <!--<div class="row">-->
+                <!--<div class="wpb_column vc_column_container vc_col-sm-12">-->
+                    <!--<div class="vc_column-inner ">-->
+                        <!--<div class="wpb_wrapper">-->
+                            <!--<div class="vc_row wpb_row vc_inner vc_row-fluid vc_custom_1520830144361">-->
+                                <!--<div class="wpb_column vc_column_container vc_col-sm-12">-->
+                                    <!--<div class="vc_column-inner ">-->
+                                        <!--<div class="wpb_wrapper">-->
+                                            <!--<div class="section-head text-center">-->
+                                                <!--<h2>Powerful Infrastructure for Decentralized Applications</h2>-->
+                                            <!--</div>-->
+                                        <!--</div>-->
+                                    <!--</div>-->
+                                <!--</div>-->
+                            <!--</div>-->
+                            <!--<div class="vc_row wpb_row vc_inner vc_row-fluid">-->
+                                <!--<div class="wpb_column vc_column_container vc_col-sm-12">-->
+                                    <!--<div class="vc_column-inner ">-->
+                                        <!--<div class="wpb_wrapper">-->
+                                            <!--<a href=""><img src="applications.jpg" style="text-align: center;"></a>-->
+                                        <!--</div>-->
+                                    <!--</div>-->
+                                <!--</div>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
         <div class="container">
             <div class="row">
-                <div class="wpb_column vc_column_container vc_col-sm-12">
-                    <div class="vc_column-inner ">
-                        <div class="wpb_wrapper">
-                            <div class="vc_row wpb_row vc_inner vc_row-fluid vc_custom_1520830144361">
-                                <div class="wpb_column vc_column_container vc_col-sm-12">
-                                    <div class="vc_column-inner ">
-                                        <div class="wpb_wrapper">
-                                            <div class="section-head text-center">
-                                                <h2>Powerful Infrastructure for Decentralized Applications</h2>
-                                            </div>
-                                        </div>
-                                    </div>
+                <div class="wpb_column vc_column_container vc_col-sm-12 vc_col-md-offset-2 vc_col-md-8">
+                    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                        <!-- Indicators -->
+                        <ol class="carousel-indicators">
+                            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#myCarousel" data-slide-to="1"></li>
+                            <li data-target="#myCarousel" data-slide-to="2"></li>
+                            <li data-target="#myCarousel" data-slide-to="3"></li>
+                            <li data-target="#myCarousel" data-slide-to="4"></li>
+                        </ol>
+
+                        <!-- Wrapper for slides -->
+                        <div class="carousel-inner">
+                            <div class="item active">
+                                <img src="slider_1.jpg" alt="" style="width:100%;">
+                                <div>
+                                    <h2>AceD Dashboard</h2>
+                                    <p>ACED Dashboard is a platform that will offer useful tools to end-user and potential business partners. ACED merchants will be able to extract key information such as network statistics, number of unique addresses, adoption rate and other market trends. This will make the concept of accepting cryptocurrency much more realistic for retailers that previously thought it was too big of a risk and technical hindrance. ACED Dashboard will also assist Masternode holders by providing detailed and relevant information about network status directly to other Mobile Devices.</p>
                                 </div>
                             </div>
-                            <div class="vc_row wpb_row vc_inner vc_row-fluid">
-                                <div class="wpb_column vc_column_container vc_col-sm-12">
-                                    <div class="vc_column-inner ">
-                                        <div class="wpb_wrapper">
-                                            <a href=""><img src="applications.jpg" style="text-align: center;"></a>
-                                        </div>
-                                    </div>
-                                </div>
+                            <div class="item">
+                                <img src="slider_2.jpg" alt="" style="width:100%;">
+                                <h2>AceD Gaming</h2>
+                                <p>The online gaming industry is expected to reach a market size of over 50 Billion US Dollars in 2018. ACED is trying to capitalize on this opportunity with the release of ACED GAMING - an online platform that will allow GAMERS to play against each other in skill-based games while wagering on the outcome. If you are a gaming developer, you can add your games to the platform and earn some ACED by taking a small fee for each transaction.</p>
+                                <p>For developers, it's not just earning money on their games rather developing a brand of their own. ACED gaming gives you the opportunity to get noticed in a grandeur way.</p>
+                            </div>
+                            <div class="item">
+                                <img src="slider_3.jpg" alt="" style="width:100%;">
+                                <h2>AceD Streaming</h2>
+                                <p>Video game streaming has become a massive industry. Some popular streamers have become celebrities through what started as a hobby. The largest game streaming service, Twitch, was recently bought by Amazon for nearly $1 Billion. ACED streaming is a streaming platform that will allow streamers to be rewarded for the quality of content that they deliver. The audience can choose to use ACED coins to tip the streamer as they deem fit. This creates an interactive social experience and gives immediate tangible rewards to the content providers.</p>
+                                <p>The next big celebrity streamer could be you.!</p>
+                            </div>
+                            <div class="item">
+                                <img src="slider_4.jpg" alt="" style="width:100%;">
+                                <h2>AceD Snap</h2>
+                                <p>ACED plans for a platform that aims to bring the world together by allowing people to see through the eyes of photographers sharing photos through the ACED platform.</p>
+                                <p>Photographers can now earn royalties through selling their photographs and by receiving tips from viewers/users. Unlike other platforms, ACED bring the ethics of decentralization allowing everyone and anyone to join and share with the world what inspires them with the opportunity to earn royalties for their work.</p>
+                                <p>Say GoodBye to all those centralized unpaid mediums and add yourself another income stream.</p>
+                            </div>
+                            <div class="item">
+                                <img src="slider_5.jpg" alt="" style="width:100%;">
+                                <h2>AceD Escrow</h2>
+                                <p>The cryptocurrency world can be harsh to a naive investor. Scammers are always one step ahead of common folks. ACED Escrow is an invaluable service for both buyers and sellers of Crypto-Assets. ACED Escrow works by holding funds until the agreed upon good is exchanged or service is rendered. This means an investor will be able to purchase an ACED Masternode directly through the service app. Eventually the Escrow service will even be able to serve as a platform to host ICO's.</p>
                             </div>
                         </div>
+
+                        <!-- Left and right controls -->
+                        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                            <span class="glyphicon glyphicon-chevron-left"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-right"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
                     </div>
                 </div>
+
             </div>
+
         </div>
         <div class="clearfix"></div>
     </section>
@@ -1639,18 +1703,19 @@
             expires: 365 // the number of days cookie  will be effective
         });
         jQuery("#popuplink").fancybox({modal:true, maxWidth: 600, overlay : {closeClick : true}});
-        var loc = window.location.href+'';
-        if (loc.indexOf('http://')==0){
-            window.location.href = loc.replace('http://','https://');
-        }
-        if (loc.indexOf('www') < 0){
-            window.location.href = loc.replace('acedcoin.com','www.acedcoin.com');
-        }
+        // var loc = window.location.href+'';
+        // if (loc.indexOf('http://')==0){
+        //     window.location.href = loc.replace('http://','https://');
+        // }
+        // if (loc.indexOf('www') < 0){
+        //     window.location.href = loc.replace('acedcoin.com','www.acedcoin.com');
+        // }
     });
 </script>
 <script type="text/javascript" src="jquery.particleground.js"></script>
 <script type="text/javascript" src="particle_demo.js"></script>
 <script id="_waubfx">var _wau = _wau || []; _wau.push(["dynamic", "xblpjn6ssl", "bfx", "073763073b8e", "small"]);</script>
 <script async src="//waust.at/d.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
