update team title

--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@
                                                           class="expand-trigger content-popup"></span></div>
                                                 <div class="team-info">
                                                     <h5 class="team-name">Tom C</h5>
-                                                    <span class="team-title">Technical Lead @Crypto Sharks</span>
+                                                    <span class="team-title">Technical Support Lead @Crypto Sharks</span>
                                                     <!--<ul class="team-social">-->
                                                     <!--<li><a href="#"><em class="fa fa-facebook"-->
                                                     <!--aria-hidden="true"></em></a></li>-->
@@ -796,7 +796,7 @@
                                                     <span data-mfp-src="http://wpdemo.oceanthemes.net/icos/team/stefan-harary/"  class="expand-trigger content-popup"></span></div>
                                                 <div class="team-info">
                                                     <h5 class="team-name">Anthony Kaz</h5>
-                                                    <span class="team-title">Community Manager @Kaz</span>
+                                                    <span class="team-title">AceD Streaming Lead @Kaz</span>
                                                 </div>
                                             </div>
                                         </div>
@@ -923,7 +923,7 @@
                                                     <span data-mfp-src="http://wpdemo.oceanthemes.net/icos/team/gabriel-bernal/" class="expand-trigger content-popup"></span></div>
                                                 <div class="team-info">
                                                     <h5 class="team-name">Steve Berry</h5>
-                                                    <span class="team-title">Technical Support @Dasche (dash)</span>
+                                                    <span class="team-title">AceD Gaming Lead @Dasche (dash)</span>
                                                 </div>
                                             </div>
 
