--- a/index.html
+++ b/index.html
@@ -866,38 +866,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="wpb_column vc_column_container vc_col-sm-6 vc_col-md-3">
-                                    <div class="vc_column-inner ">
-                                        <div class="wpb_wrapper">
-                                            <div class="team-circle text-center">
-                                                <div class="team-photo">
-                                                    <img src="cryptomick.jpg" alt="">
-                                                    <span data-mfp-src="http://wpdemo.oceanthemes.net/icos/team/gabriel-bernal/"   class="expand-trigger content-popup"></span></div>
-                                                <div class="team-info">
-                                                    <h5 class="team-name">Cody McKenna</h5>
-                                                    <span class="team-title">Marketing & Community Management @Crypto-Mick</span>
-                                                </div>
-                                            </div>
 
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="wpb_column vc_column_container vc_col-sm-6 vc_col-md-3">
-                                    <div class="vc_column-inner ">
-                                        <div class="wpb_wrapper">
-                                            <div class="team-circle text-center">
-                                                <div class="team-photo">
-                                                    <img src="marketer.png" alt="">
-                                                    <span data-mfp-src="http://wpdemo.oceanthemes.net/icos/team/gabriel-bernal/"  class="expand-trigger content-popup"></span></div>
-                                                <div class="team-info">
-                                                    <h5 class="team-name">Adam Basque</h5>
-                                                    <span class="team-title">Marketing @CanadianCrypto</span>
-                                                </div>
-                                            </div>
-
-                                        </div>
-                                    </div>
-                                </div>
                                 <div class="wpb_column vc_column_container vc_col-sm-6 vc_col-md-3">
                                     <div class="vc_column-inner ">
                                         <div class="wpb_wrapper">
@@ -967,6 +936,38 @@
                                         <div class="wpb_wrapper">
                                             <div class="team-circle text-center">
                                                 <div class="team-photo">
+                                                    <img src="cryptomick.jpg" alt="">
+                                                    <span data-mfp-src="http://wpdemo.oceanthemes.net/icos/team/gabriel-bernal/"   class="expand-trigger content-popup"></span></div>
+                                                <div class="team-info">
+                                                    <h5 class="team-name">Cody McKenna</h5>
+                                                    <span class="team-title">Marketing & Community Management @Crypto-Mick</span>
+                                                </div>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="wpb_column vc_column_container vc_col-sm-6 vc_col-md-3">
+                                    <div class="vc_column-inner ">
+                                        <div class="wpb_wrapper">
+                                            <div class="team-circle text-center">
+                                                <div class="team-photo">
+                                                    <img src="marketer.png" alt="">
+                                                    <span data-mfp-src="http://wpdemo.oceanthemes.net/icos/team/gabriel-bernal/"  class="expand-trigger content-popup"></span></div>
+                                                <div class="team-info">
+                                                    <h5 class="team-name">Adam Basque</h5>
+                                                    <span class="team-title">Marketing @CanadianCrypto</span>
+                                                </div>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="wpb_column vc_column_container vc_col-sm-6 vc_col-md-3">
+                                    <div class="vc_column-inner ">
+                                        <div class="wpb_wrapper">
+                                            <div class="team-circle text-center">
+                                                <div class="team-photo">
                                                     <img src="Andrew.png" alt="">
                                                     <span data-mfp-src="http://wpdemo.oceanthemes.net/icos/team/gabriel-bernal/" class="expand-trigger content-popup"></span></div>
                                                 <div class="team-info">
@@ -999,7 +1000,7 @@
                                         <div class="wpb_wrapper">
                                             <div class="team-circle text-center">
                                                 <div class="team-photo">
-                                                    <img src="Frank-Garzajpg.jpg" alt="">
+                                                    <img src="FrankGarza.png" alt="">
                                                     <span data-mfp-src="http://wpdemo.oceanthemes.net/icos/team/gabriel-bernal/" class="expand-trigger content-popup"></span></div>
                                                 <div class="team-info">
                                                     <h5 class="team-name">Frank Garza</h5>
